# C2-ML-Detection-Framework

./: .gitignore  LICENSE  README.md  extracted_data.csv  pyproject.toml
data/collected/infected_machines/: infected_1.csv  infected_2.csv  infected_3.csv  infected_4.csv  infected_5.csv
data/collected/normal_machines/: benign_1.csv  benign_2.csv  (+3 more)
data/labelled/: collection_data.csv
data/processed/: collection.csv  trickbot.csv
mlruns/0/: meta.yaml
models/dridex/: LSTM  LSTM.h5  LSTM.pkl  logreg.pkl  xgb.pkl
models/emotet/: logreg.pkl  xgb.pkl
notebooks/data_labelling/: Collection.ipynb  dridex.ipynb  emotet.ipynb  trickbot copy.ipynb  trickbot.ipynb
notebooks/data_parsing/: cridex.py  dridex.py  emotet.py  trickbot.py
notebooks/data_processing/: Collection.ipynb  dridex copy.ipynb  dridex.ipynb  emotet copy.ipynb  emotet.ipynb  trickbot.ipynb
notebooks/modeling/: ML.ipynb  ML2.ipynb  classification_results.csv  collection.ipynb  cridex.ipynb  dridex copy.ipynb  dridex.ipynb  emotet copy.ipynb  emotet.ipynb  trickbot.ipynb
variables/cridex/: static_no_pcaFlags_Encoder.pkl  static_no_pcaProtocol_Encoder.pkl  static_no_pcadirection_Encoder.pkl
variables/dridex/: Direction_Encoder.pkl  Label_Encoder.pkl  Protocol_Encoder.pkl  scaler  scaler.pkl  static_no_pcaFlags_Encoder.pkl
variables/emotet/: static_no_pcaFlags_Encoder.pkl  static_no_pcaLabel_Encoder.pkl  static_no_pcaProtocol_Encoder.pkl  static_no_pcadirection_Encoder.pkl
variables/trickbot/: static_no_pcaFlags_Encoder.pkl  static_no_pcaLabel_Encoder.pkl  static_no_pcaProtocol_Encoder.pkl
(+337 files in other folders)
