[tool.poetry]
name = "c2-detection"
version = "0.1.0"
description = ""
authors = ["Yousinator <y.omusabeh@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.10"
pyshark = "^0.6"
ipykernel = "^6.29.5"
pandas = "^2.2.3"
prisma-ml = "^0.1.1"
tqdm = "^4.66.5"
jinja2 = "^3.1.4"
xgboost = "^2.1.1"
scapy = "^2.6.1"
poetry = "^2.0.0"
keras = "^3.8.0"
tensorflow = "^2.18.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
